Big step home page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" href="src/style.scss" />
     <title>Document</title>
 </head>
 <body>
-    Hello World
+  <header class="header">
+		<nav class="header__nav">
+			<div class="header__logo">
+				<a href="index.html" class="header__logo--text">
+					<span>PROJECT</span> ALPHA
+				</a>
+				<div class="header__logo--design"></div>
+			</div>
+			<ul class="header__nav--items">
+				<li><a>Docs</a></li>
+				<li><a>Status</a></li>
+				<li><a>Pricing</a></li>
+				<li><a>Log in</a></li>
+				<button><a>Sign Up</a></button>
+			</ul>
+		</nav>
+	</header>
+	<main class="main">
+		<div class="hero">
+			<div class="hero__text">
+				<h1>Wasabi in the city. Fuck them ! Macron in the wagon. Messi love the PVC.</h1>
+				<p>Vroum vroum ! This is what my wife said to Benjamin Castaldi. A tomato is not a fruit xd.
+					Calm down bro, you are the greatest catcher in the city. I beg you don’t go to the Bus Station ! You will die for sure, I swear. Bitch !</p>
+				<button>Documentation
+					<img src="src/img/chevron.svg" class="button__detail"></img>
+				</button>
+			</div>
+			<div class="hero__image">
+				<img src="src/img/image.png">
+			</div>
+		</div>
+		<div class="sponsor">
+			<ul class="sponsor__image">
+				<li><img src="src/img/epic.png"></li>
+				<li><img src="src/img/steam.png"></li>
+				<li><img src="src/img/origin.png"></li>
+				<li><img src="src/img/uplay.png"></li>
+				<li><img src="src/img/blizzard.png"></li>
+				<li><img src="src/img/rockstar.png"></li>
+			</ul>
+		</div>	
+	</main>
+	<div class="transition">
+		<img src="src/img/transition-left.svg">
+		<img src="src/img/transition-right.svg">
+	</div>
+	<main class="main--contain">
+		<div class="contain">
+			<div class="contain__text">
+				<h1>Wasabi in the city. Fuck them ! Macron in the wagon. Messi love the PVC. Most talented Sion on earth.</h1>
+				<p>Vroum vroum ! This is what my wife said to Benjamin Castaldi. A tomato is not a fruit xd.
+					Calm down bro, you are the greatest catcher in the city. I beg you don’t go to the Bus Station ! You will die for sure, I swear. Bitch !</p>
+				<button>Documentation
+					<img src="src/img/chevron.svg" class="button__detail"></img>
+				</button>
+			</div>
+			<div class="contain__image">
+				<img src="src/img/image.png">
+			</div>
+      <div class="contain__text--left">
+				<p>Vroum vroum ! This is what my wife said to Benjamin Castaldi. A tomato is not a fruit xd.
+					Calm down bro, you are the greatest catcher in the city. I beg you don’t go to the Bus Station ! You will die for sure, I swear. Bitch !</p>
+				<button>Documentation
+					<img src="src/img/chevron.svg" class="button__detail"></img>
+				</button>
+			</div>
+      <div class="contain__text--right">
+				<p>Vroum vroum ! This is what my wife said to Benjamin Castaldi. A tomato is not a fruit xd.
+					Calm down bro, you are the greatest catcher in the city. I beg you don’t go to the Bus Station ! You will die for sure, I swear. Bitch !</p>
+				<button>Documentation
+					<img src="src/img/chevron.svg" class="button__detail"></img>
+				</button>
+			</div>
+		</div>
+	</main>
+  <div class="transition__status">
+    <img class="transition__image" src="src/img/transition.svg">
+    <div class="transition__main">
+      <div class="transition__main--status">
+        <div class="transition__main--text">
+          <h1>Wasabi in the city. Fuck them ! Macron in the wagon. Messi love the PVC.</h1>
+          <p>Vroum vroum ! This is what my wife said to Benjamin Castaldi. A tomato is not a fruit xd.
+            Calm down bro, you are the greatest catcher in the city. I beg you don’t go to the Bus Station ! You will die for sure, I swear. Bitch !</p>
+          <button>Documentation
+            <img src="src/img/chevron.svg" class="button__detail"></img>
+          </button>
+        </div>
+        <div class="transition__main--image">
+          <img src="src/img/image.png">
+        </div>
+      </div>
+    </div>
+	</div>
 </body>
 </html>
