--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				<div class="header__logo--design"></div>
 			</div>
 			<ul class="header__nav--items">
-				<li><a>Docs</a></li>
+				<li><a href="src/pages/docs.html">Docs</a></li>
 				<li><a>Status</a></li>
 				<li><a>Pricing</a></li>
 				<li><a>Log in</a></li>
